cmake_minimum_required(VERSION 2.8)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
project(deformerPlugin)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_MACOSX_RPATH 1)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIRE}/install)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
add_subdirectory(src)
